--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Laila";
-    src: url("/fontes/Laila-Regular.ttf");
+    src: url("../fontes/Laila-Regular.ttf");
 }
 
 body {
